
      - index items now have an 'index title' attribute in addition to an 
        'anchor name' attribute. The title is used for displaying in an 
        indexer. The name is used for the anchor, and thus should be a valid
        anchor name.
        
        If no title is given, the index is considered a 'pure' anchor, and
        will not be found by Indexers.

    Ported from 1.5 branch

      - Default installations will have the html meta tags and accessibility
        links skipped in the layout macro to have better out of the box
        performance. Site managers can turn them on as needed.

      - 2007-01-24: added an explicit base tag to the layout template, so 
        that it no longer includes a trailing slash which zope adds for 
        all containerlike objects, which Silva Documents are. This means
        that linking to anchors now works like you would expect it to.

      - Changed calls from getMetdata to getMetadataValue where possible,
        resulting in a significant performance gain.

      - Non Ascii characters in names or values of codesource paramaters
        no longer result in errors.

      - Incorrect links entered by hand or imported broke the path adapter.
        Since this made editing the document impossible, I added some 
        defensive code.

      - Anchors around divs break in explorer, so they were put inside in 
        the xslt renderer.

  Silva 1.6b4

    Bugs fixed:

      - New version of SilvaMetadata (0.12) released which fixes a bug
        where storing of empty metadata fields/deleting metadata values was
        impossible.

  Silva 1.6b3 (first public beta)

    Features added

      - Assets now have a version_status method that always returns 'public'
        which means they can be found by SilvaFind.

      - Old version cleanup code was made more robust and can now be
        used to delete all old versions older than a certain date, 
        instead of just all old versions. 
