@@ -3,9 +3,9 @@
 <html metal:use-macro="here/layout_macro.html/macros/layout">
 
 Use this template to customize the layout that is defined in layout_macro.html. 
-The 'fill-slots' here can be used to override slots in the layout_macro.
-
-The following slots are available:
+A number of 'fill-slots' are prvoded that can be used to override slots in the 
+layout_macro. Activate by removing the 'no' from 'nometal'. None of the slots 
+are active in a default installation. The following slots are available:
 head
   title
   meta
@@ -15,62 +15,26 @@ body
   header
     top_navigation
   table_of_contents
-  main: in use
+  main
   footer
 
-Slots are not active. Activate by removing the 'no' from 'nometal'.
-
-<!-- only comments starting with a capital letter will appear in the rendered HTML source -->
-
 <head nometal:fill-slot="head">
-<!-- customize html title -->
-<title nometal:fill-slot="title" 
-  tal:content="here/get_title_or_id">
-  Local or custom title
-</title>
-
-<!-- add custom meta tags -->
-<nometal:slot fill-slot="meta">
-  <!-- Meta slot (empty) -->
-</nometal:slot>
-
-<!-- define custom stylesheet -->
-<nometal:slot fill-slot="style">
-  <!-- Style slot (empty) -->
-</nometal:slot>
-
-<!-- add custom scripts -->
-<script nometal:fill-slot="script" type="text/javascript">
-  <!-- Script slot (empty) -->
-</script>
+<title nometal:fill-slot="title"><!-- customize html title --></title>
+<nometal:slot fill-slot="meta"><!-- add custom meta tags --></nometal:slot>
+<nometal:slot fill-slot="style"><!-- define custom stylesheet --></nometal:slot>
+<script nometal:fill-slot="script" type="text/javascript"><!-- add custom scripts --></script>
 </head>
 
-<body nometal:fill-slot="body" tal:omit-tag="">
+<body nometal:fill-slot="body">
 
+<!-- begin header slot -->
 <div nometal:fill-slot="header" tal:omit-tag="">
-  <!-- begin header slot -->
-  <div nometal:fill-slot="top_navigation" tal:omit-tag="">
-    <!-- top navigation slot -->
-  </div>
-  <!-- end header slot -->
+  <div nometal:fill-slot="top_navigation" tal:omit-tag=""></div>
 </div>
-
-<div nometal:fill-slot="table_of_contents" tal:omit-tag="">
-  <!-- table of Contents slot -->
-</div>
-
-<!-- start Silva content -->
-<div metal:fill-slot="main" 
-  tal:define="view_method options/view_method"
-  tal:content="structure python:getattr(here, view_method)()"
-  tal:omit-tag="">
-  <!-- this comment gets replaced by the Silva document content -->
-</div>
-<!-- end Silva content -->
-
-<div nometal:fill-slot="footer" tal:omit-tag="">
-  <!-- Page footer slot -->
-</div>
+<!-- end header slot -->
+<div nometal:fill-slot="table_of_contents" tal:omit-tag=""><!-- table of contents slot --></div>
+<div nometal:fill-slot="main" tal:omit-tag=""><!-- slot in custom content --></div>
+<div nometal:fill-slot="footer" tal:omit-tag=""><!-- page footer slot --></div>
 
 </body>
 </html>
