@@ -60,6 +60,9 @@ Silva changes
 
     Ported from 1.5 branch
 
+      - Simplified the content.html layout file to make it easier to understand. 
+        Moved the content call into the layout macro. Reformatted the comments.
+
       - Default installations will have the html meta tags and accessibility
         links skipped in the layout macro to have better out of the box
         performance. Site managers can turn them on as needed.
